--- a/bhumitfinserv/index.html
+++ b/bhumitfinserv/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="logo f300 row">
+        <div class="logo row">
             <img src="433843475_810153597621235_8366403779798969748_n-removebg-preview.png" alt="Bhumit Finserv Logo">
             <h1>Bhumit Finserv<strong style="color: #bebebe;">.in</strong></h1>
         </div>
@@ -69,7 +69,7 @@
 
     <section id="services">
         <h2>Our Services</h2>
-        <div class="services-container f300">
+        <div class="services-container f300 f600">
             <div class="service">
                 <h3>SIP Planning</h3>
                 <p>Secure your future, with SIP advisory. </p>
@@ -79,7 +79,7 @@
                 <p>Maximize your investments with our strategies.</p>
             </div>
         </div>
-        <div class="services-container f300">
+        <div class="services-container f300 f600">
             <div class="service">
                 <h3>Tax Planning</h3>
                 <p>Assement your TAX with our TAX planning</p>
